--- a/company_web_page.html
+++ b/company_web_page.html
@@ -12,6 +12,9 @@
 </CENTER>
 
 <HR>
+
+If you want to know more click here
+<a href="about_company.html">About us</a>
     
 <H1>This is a Header</H1>
 
@@ -22,6 +25,8 @@
 <P><B>This is a new paragraph!</B>
 
 <BR> <B><I>This is a new sentence without a paragraph break, in bold italics.</I></B>
+<BR> <B><U>This is a new sentence without a paragraph break, in bold underline.</U></B>
+
 
 <HR>
     
